--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
